Bug 1132929 - [Accessibility] fixing visibility issues around Video app.

--- a/apps/video/style/video.css
+++ b/apps/video/style/video.css
@@ -666,7 +666,8 @@ body:not(.pick-activity) #picker-close {
  *    in shadow-dom.
  */
 
-body:not(.pick-activity) #picker-done {
+body:not(.pick-activity) #picker-done,
+body:not(.pick-activity) #picker-header {
   display: none !important; /* 1 */
 }
 
@@ -742,6 +743,11 @@ body.pick-activity #thumbnails-bottom {
 .layout-fullscreen-player #thumbnail-list-view,
 .layout-fullscreen-player #thumbnails {
   display: none;
+}
+
+/* overlay mode */
+.overlay #app-container {
+  visibility: hidden;
 }
 
 /* spinner is only valid for tablet and landscape mode */
